dhall/tests/type-inference/failure/unit/EmptyToMap.txt
Type error: error: `toMap` applied to an empty record requires a type annotation
 --> <current file>:1:1
  |
1 | toMap {=}
  | ^^^^^^^^^ `toMap` applied to an empty record requires a type annotation
  |
